Fix font size for logo on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h1, h2, h3 {
 }
 
 #logo {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
     margin-left: 20px;
 }
 
